# hindley_milner

./: .gitattributes  .gitignore  .ocp-indent  .travis.yml  LICENSE.txt  README.md  bsconfig.json  dune-project  dune-workspace  hm.opam  package.json  run.t
lib/: dune  hm.ml  hm.mli
src/: hm.ml  hm.mli
test/: dune  hm.expected  run_tests.ml
